--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -299,16 +299,15 @@ h6 {
 }
 
 #hero .container {
-  padding-top: 70px;
+  padding-top: 40px;
 }
 
 #hero h1 {
-  margin: 0;
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
   color: #141d2b;
-  width: 60%;
+  width: 80%;
   color: #2d405f;
 }
 
@@ -327,6 +326,8 @@ h6 {
   display: block;
   padding: 8px 32px 10px 32px;
   margin-top: 25px;
+  margin-bottom: 25px;
+
   border-radius: 5px;
   transition: 0.5s;
   color: #fff;
@@ -339,7 +340,7 @@ h6 {
 
 #hero .hero-img {
   max-width: 60%;
-  margin-top: 40px;
+  margin-top: 30px;
 }
 
 @media (max-width: 992px) {
@@ -964,4 +965,14 @@ section {
 
 .how_to_step{
   font-weight: bold;
+}
+
+.contact {
+  background: #e2e5fe;
+  padding: 9px 25px;
+  margin-left: 30px;
+  border-radius: 5px;
+  font-weight: 600;
+  color: #fff;
+  color: #3b4ef8;
 }
