--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -845,3 +845,31 @@ section {
 .first{
   margin-bottom: 10px;
 }
+
+.terms-section {
+  padding: 60px;
+  font-size: 14px;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.terms-section h2 {
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: #2d405f;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.terms-section h3 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 15px;
+  color: #2d405f;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.terms-section p {
+  margin-bottom: 15px;
+  line-height: 1.6;
+  color: #444444;
+}
